<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">
        <!--搜索-->

        <RelativeLayout android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@mipmap/search_top_background"
            android:layout_height="40dp">

            <Button android:id="@+id/btnSearch"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textSize="12sp"
                android:textStyle="bold"
                android:background="@mipmap/search_btn_background"
                android:text="搜索"/>

            <RelativeLayout android:id="@+id/rlSearchFrameDelete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:layout_toLeftOf="@id/btnSearch">

                <EditText android:id="@+id/etSearch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:background="@mipmap/search_frame"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="32dp"
                    android:textSize="12sp"
                    android:hint="搜索..."/>

                <ImageView android:id="@+id/ivDeleteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/delete"
                    android:layout_centerInParent="true"
                    android:paddingRight="20dp"
                    android:visibility="gone"/>

            </RelativeLayout>


        </RelativeLayout>

        <!--推荐-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.4">
            <android.support.v4.view.ViewPager
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.merhold.extensiblepageindicator.ExtensiblePageIndicator
                android:id="@+id/flexibleIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:indicatorRadius="12dp"
                app:indicatorPadding="32dp"
                android:layout_alignBottom="@+id/container"
                />
        </RelativeLayout>


        <!--烹饪方法-->
        <include layout="@layout/home_menu_navigation_slice"/>

        <!--广告-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">
            <android.support.v4.view.ViewPager
                android:id="@+id/container1"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.merhold.extensiblepageindicator.ExtensiblePageIndicator
                android:id="@+id/flexibleIndicator1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:indicatorRadius="12dp"
                app:indicatorPadding="32dp"
                android:layout_alignBottom="@+id/container1"
                />

        </RelativeLayout>



    </LinearLayout>
    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="60dip"
    android:layout_gravity="bottom">

    <ImageView
        android:id="@+id/tab_separate_imgv"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:src="@color/black"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom"
        android:background="#FFFFFF"
        android:layout_below="@id/tab_separate_imgv"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbtn_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab_item_home"
            android:drawableTop="@drawable/tab_item_home_selector"
            android:drawablePadding="@dimen/padding_tab_bottom_drawable"
            android:textSize="14sp"
            style="@style/tab_bottom"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rbtn_love"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab_item_love"
            android:drawableTop="@drawable/tab_item_love_selector"
            android:drawablePadding="@dimen/padding_tab_bottom_drawable"
            android:textSize="14sp"
            style="@style/tab_bottom"
            />

        <RadioButton
            android:id="@+id/rbtn_introduce"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab_item_introduce"
            android:drawableTop="@drawable/tab_item_shopcart_selector"
            android:drawablePadding="@dimen/padding_tab_bottom_drawable"
            android:textSize="14sp"
            style="@style/tab_bottom"
            />

        <RadioButton
            android:id="@+id/rbtn_want"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab_item_want"
            android:drawableTop="@drawable/tab_item_want_selector"
            android:drawablePadding="@dimen/padding_tab_bottom_drawable"
            android:textSize="14sp"
            style="@style/tab_bottom"
            />

        <RadioButton
            android:id="@+id/rbtn_me"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab_item_me"
            android:drawableTop="@drawable/tab_item_mine_selector"
            android:drawablePadding="@dimen/padding_tab_bottom_drawable"
            android:textSize="14sp"
            style="@style/tab_bottom"
            />
    </RadioGroup>

    </RelativeLayout>
</FrameLayout>